# rust-audio-basics

./: .gitignore  Cargo.toml  Makefile
basic-android-integration/: Cargo.toml  README.md  build.rs
basic-android-integration/src/: amidi_library.rs  amidi_library_function_pointer_types.rs  basic_android_integration.rs  imports.rs  lib.rs  midi_device.rs  midi_input_port.rs  midi_output_port.rs
