[package]
name = "basic-android-integration"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
ndk = "*"
ndk-sys = "*"
jni = "*"
export-magic.workspace = true

[lib]
crate-type = ["cdylib"]
