[package]
name = "basic-android-integration"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
ndk                      = "*"
ndk-sys                  = "*"
jni                      = "*"
libloading.workspace     = true
export-magic.workspace   = true
tracing-setup.workspace  = true
traced-test.workspace    = true
tracing.workspace        = true
derive_builder.workspace = true
getset.workspace         = true

[build-dependencies]
tracing-setup.workspace = true
traced-test.workspace   = true
tracing.workspace       = true

[lib]
crate-type = ["cdylib"]
